fix purgecss break in production build

--- a/assets/sass/components/navbar.sass
+++ b/assets/sass/components/navbar.sass
@@ -9,7 +9,7 @@ $navbar-height: 3.6rem !default
   backdrop-filter: blur(20px) saturate(180%)
 
   &.shadow
-    box-shadow: 0 8px 22px -2px rgba(0, 0, 0, .6);
+    box-shadow: 0 8px 22px -2px rgba(0, 0, 0, .6)
     transition: box-shadow .2s ease
 
   .inner
